--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -30,11 +30,22 @@ jobs:
           YESTERDAY=$(date -I -d "yesterday")
           TARGET_DIR="data/futures/um/daily/metrics/${SYMBOL}"
           mkdir -p "$TARGET_DIR"
-          START="$YESTERDAY"
+
+          # Backfill: ab Tag nach letztem CSV bis gestern
+          if compgen -G "$TARGET_DIR/${SYMBOL}-metrics-*.csv" > /dev/null; then
+            LAST=$(find "$TARGET_DIR" -type f -name "${SYMBOL}-metrics-*.csv" \
+              | sed -E "s/.*${SYMBOL}-metrics-([0-9]{4}-[0-9]{2}-[0-9]{2})\.csv/\1/" \
+              | sort | tail -n1)
+            START=$(date -d "$LAST +1 day" '+%Y-%m-%d')
+          else
+            START="$YESTERDAY"
+          fi
           END="$YESTERDAY"
+
           cur="$START"
           while [[ "$cur" < "$END" || "$cur" == "$END" ]]; do
-            ZIP="${SYMBOL}-metrics-${cur}.zip"
+            DATE="$cur"
+            ZIP="${SYMBOL}-metrics-${DATE}.zip"
             URL="https://data.binance.vision/data/futures/um/daily/metrics/${SYMBOL}/${ZIP}"
             echo "→ Fetching $ZIP"
             if curl -sSf "$URL" -o tmp.zip; then
@@ -48,11 +59,12 @@ jobs:
             cur=$(date -I -d "$cur +1 day")
           done
 
-      - name: Upload metrics artifacts
+      - name: Upload all metrics as single artifact
         uses: actions/upload-artifact@v4
         with:
-          name: data-metrics-${{ matrix.symbol }}
-          path: data/futures/um/daily/metrics/${{ matrix.symbol }}/*.csv
+          name: data-metrics
+          path: |
+            data/futures/um/daily/metrics/**/*.csv
 
   aggregate_and_push:
     name: Aggregate & Commit metrics Data
@@ -60,26 +72,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout fresh
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: true
 
-      - name: Download metrics artifacts
+      - name: Download metrics artifact
         uses: actions/download-artifact@v4
         with:
+          name: data-metrics
           path: data-artifacts
+
+      - name: Flatten into data-artifacts/data-metrics
+        shell: bash
+        run: |
+          mkdir -p data-artifacts/data-metrics
+          find data-artifacts -type f -name "*-metrics-*.csv" \
+            -exec mv {} data-artifacts/data-metrics/ \;
 
       - name: Merge metrics into historical_tech
         shell: bash
         run: |
           set -euo pipefail
           mkdir -p historical_tech/metrics
-          find data-artifacts -type f | while read src; do
-            # Datei: BNBUSDT-metrics-YYYY-MM-DD.csv
-            file=$(basename "$src")
-            symbol=${file%%-*}
-            dst="historical_tech/metrics/${symbol}/${file}"
+          for file in data-artifacts/data-metrics/*.csv; do
+            fname=$(basename "$file")
+            symbol=${fname%%-*}                            # z.B. "BTCUSDT"
+            dst="historical_tech/metrics/${symbol}/${fname}"
             mkdir -p "$(dirname "$dst")"
-            mv "$src" "$dst"
+            mv "$file" "$dst"
             echo " ➕ $dst"
           done
 
