--- a/.github/workflows/download_aggTrades.yml
+++ b/.github/workflows/download_aggTrades.yml
@@ -13,23 +13,23 @@ on:
 jobs:
   download-and-feature:
     name: Download & Feature ${{ matrix.symbol }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    # Wechsel zu self-hosted nur hier anpassen
     strategy:
       matrix:
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
       max-parallel: 1
-
     env:
       REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       REPO:       ${{ github.repository }}
 
     steps:
-      - name: Checkout
+      - name: 📥 Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true
 
-      - name: Setup Python & Tools
+      - name: ⚙️ Setup Python & Tools
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
@@ -38,20 +38,20 @@ jobs:
           sudo apt-get install -y unzip curl
           pip3 install --upgrade pip pandas numpy pyarrow
 
-      - name: Calc dates
+      - name: 📅 Calc dates
         id: dates
         run: |
           echo "global_start=${{ inputs.start_date }}" >> $GITHUB_OUTPUT
-          echo "global_end=${{ inputs.end_date   }}" >> $GITHUB_OUTPUT
+          echo "global_end=${{ inputs.end_date }}"   >> $GITHUB_OUTPUT
 
-      - name: Download & unzip raw data with Overlap & Inception
+      - name: 📂 Download & unzip raw data with Overlap & Inception
         shell: bash
         run: |
           SYMBOL=${{ matrix.symbol }}
           SDG=${{ steps.dates.outputs.global_start }}
           ED=${{ steps.dates.outputs.global_end }}
 
-          # 1) Initiales Inception-Datum
+          # 1) Inception per Symbol
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT) INC=2019-12-31;;
             XRPUSDT)         INC=2020-01-06;;
@@ -61,52 +61,52 @@ jobs:
             *)               INC=$SDG;;
           esac
 
-          # 2) Für alle außer BTCUSDT|ETHUSDT INC anpassen bis erste ZIP existiert
-          if [[ "$SYMBOL" != "BTCUSDT" && "$SYMBOL" != "ETHUSDT" ]]; then
+          # 2) Für alle außer BTCUSDT INC so lange erhöhen, bis ZIP existiert
+          if [ "$SYMBOL" != "BTCUSDT" ]; then
             CAND="$INC"
-            until curl -sSf "https://data.binance.vision/data/futures/um/daily/aggTrades/$SYMBOL/${SYMBOL}-aggTrades-$CAND.zip" -o /dev/null; do
-              CAND=$(date -I -d "$CAND +1 day")
+            while true; do
+              ZIP="${SYMBOL}-aggTrades-${CAND}.zip"
+              URL="https://data.binance.vision/data/futures/um/daily/aggTrades/${SYMBOL}/${ZIP}"
+              if curl -sSf "$URL" -o /dev/null; then
+                INC="$CAND" && break
+              else
+                CAND=$(date -I -d "$CAND +1 day")
+              fi
             done
-            INC=$CAND
           fi
 
           # 3) SD = max(global_start, INC)
           t1=$(date -d"$SDG" +%s); t2=$(date -d"$INC" +%s)
           [ $t1 -lt $t2 ] && SD=$INC || SD=$SDG
 
-          # 4) Overlap-Tag und Download-Verzeichnis
+          # 4) Overlap-Tag
           SD_RAW=$(date -I -d "$SD -1 day")
           DIR=data/aggTrades/$SYMBOL
-          rm -rf "$DIR"
           mkdir -p "$DIR"
 
-          # 5) Download-Loop
+          # 5) Download-Loop inkl. Overlap
           CUR="$SD_RAW"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-aggTrades-${CUR}.zip"
+            URL="https://data.binance.vision/data/futures/um/daily/aggTrades/${SYMBOL}/${ZIP}"
             echo "→ Fetching $ZIP"
-            if curl -sSf "https://data.binance.vision/data/futures/um/daily/aggTrades/$SYMBOL/$ZIP" -o "$ZIP"; then
+            if curl -sSf "$URL" -o "$ZIP"; then
               unzip -q -o "$ZIP" -d "$DIR" && rm -f "$ZIP"
-              # ── H E A D E R  F I X ──
-              for F in "$DIR"/*.csv; do
-                sed -i '1iagg_trade_id,price,quantity,first_trade_id,last_trade_id,transact_time,is_buyer_maker' "$F"
-              done
             else
               echo "⚠️ Missing $ZIP – skipping"
-              rm -f "$ZIP"
+              rm -f "$ZIP" || true
             fi
             CUR=$(date -I -d "$CUR +1 day")
           done
 
-      - name: Verify CSV directory
+      - name: ✅ Verify CSV directory
         run: |
           if [ ! -d "data/aggTrades/${{ matrix.symbol }}" ]; then
             echo "❌ data/aggTrades/${{ matrix.symbol }} not found"
             exit 1
           fi
-          echo "✅ data/aggTrades/${{ matrix.symbol }} exists"
 
-      - name: Feature extraction
+      - name: 📊 Feature extraction
         run: |
           mkdir -p historical_tech/aggTrades/features
           python3 extract_aggTrades_features.py \
@@ -115,7 +115,7 @@ jobs:
             --start-date  ${{ steps.dates.outputs.global_start }} \
             --end-date    ${{ steps.dates.outputs.global_end }}
 
-      - name: Sync & Push changes
+      - name: 🔄 Sync & Push changes
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -126,6 +126,6 @@ jobs:
           git commit -m "♻️ ${{ matrix.symbol }} Features ${{ steps.dates.outputs.global_start }} to ${{ steps.dates.outputs.global_end }}" || echo "No changes to commit"
           git push https://x-access-token:${REPO_TOKEN}@github.com/${REPO}.git HEAD:main
 
-      - name: Cleanup raw data
+      - name: 🧹 Cleanup raw data
         if: always()
         run: rm -rf data/aggTrades/${{ matrix.symbol }}
