--- a/.github/workflows/download_aggTrades.yml
+++ b/.github/workflows/download_aggTrades.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   download-and-feature:
     name: Download & Feature ${{ matrix.symbol }}
-    runs-on: self-hosted   # oder ubuntu-latest, wie Du willst
+    runs-on: self-hosted    # oder ubuntu-latest
     strategy:
       matrix:
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
@@ -25,9 +25,7 @@ jobs:
     steps:
       - name: 🧹 Clean old artifacts
         run: |
-          # entferne alle alten Zips im Workspace
           rm -f *.zip
-          # entferne den CSV-Ordner, falls noch von vorigen Jobs da
           rm -rf data/aggTrades/${{ matrix.symbol }}
 
       - name: Checkout
@@ -49,7 +47,7 @@ jobs:
         id: dates
         run: |
           echo "global_start=${{ inputs.start_date }}" >> $GITHUB_OUTPUT
-          echo "global_end=${{ inputs.end_date }}"   >> $GITHUB_OUTPUT
+          echo "global_end=${{ inputs.end_date   }}" >> $GITHUB_OUTPUT
 
       - name: Download & unzip raw data with Overlap & Inception
         shell: bash
@@ -57,8 +55,52 @@ jobs:
           SYMBOL=${{ matrix.symbol }}
           SDG=${{ steps.dates.outputs.global_start }}
           ED=${{ steps.dates.outputs.global_end }}
-          # … hier Dein bestehender Download-Loop …
-          # (unverändert)
+
+          # 1) Inception-Datum festlegen
+          case "$SYMBOL" in
+            BTCUSDT|ETHUSDT) INC=2019-12-31;;
+            XRPUSDT)         INC=2020-01-06;;
+            BNBUSDT)         INC=2020-02-10;;
+            SOLUSDT)         INC=2020-09-14;;
+            ENAUSDT)         INC=2024-04-02;;
+            *)               INC=$SDG;;
+          esac
+
+          # 2) Für alle außer BTCUSDT INC auf erstes existierendes Datum schieben
+          if [ "$SYMBOL" != "BTCUSDT" ]; then
+            CAND="$INC"
+            until curl -sSf \
+                "https://data.binance.vision/data/futures/um/daily/aggTrades/$SYMBOL/$SYMBOL-aggTrades-$CAND.zip" \
+                -o /dev/null; do
+              CAND=$(date -I -d "$CAND +1 day")
+            done
+            INC=$CAND
+          fi
+
+          # 3) Startdatum = max(global_start, INC)
+          t1=$(date -d"$SDG" +%s)
+          t2=$(date -d"$INC" +%s)
+          if [ $t1 -lt $t2 ]; then SD="$INC"; else SD="$SDG"; fi
+
+          # 4) Download‐Loop inkl. Überlappungstag (SD-1)
+          SD_RAW=$(date -I -d "$SD -1 day")
+          DIR=data/aggTrades/$SYMBOL
+          mkdir -p "$DIR"
+
+          CUR="$SD_RAW"
+          while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
+            ZIP="${SYMBOL}-aggTrades-${CUR}.zip"
+            echo "→ Fetching $ZIP"
+            if curl -sSf \
+                 "https://data.binance.vision/data/futures/um/daily/aggTrades/$SYMBOL/$ZIP" \
+                 -o "$ZIP"; then
+              unzip -q -o "$ZIP" -d "$DIR" && rm -f "$ZIP"
+            else
+              echo "⚠️ Missing $ZIP – skipping"
+              rm -f "$ZIP" || true
+            fi
+            CUR=$(date -I -d "$CUR +1 day")
+          done
 
       - name: Verify CSV directory
         run: |
@@ -90,5 +132,4 @@ jobs:
       - name: Cleanup raw data
         if: always()
         run: |
-          # Lösche alles, was wir gerade heruntergeladen haben
           rm -rf data/aggTrades/${{ matrix.symbol }} *.zip
