--- a/.github/workflows/download_bookDepth.yml
+++ b/.github/workflows/download_bookDepth.yml
@@ -23,20 +23,10 @@ jobs:
       REPO:       ${{ github.repository }}
 
     steps:
-      - name: 🧹 Clean old artifacts
-        run: |
-          # alle alten CSVs & ZIPs löschen
-          find . -maxdepth 1 -type f -name '*.csv' -delete
-          # das BookDepth-Verzeichnis zurücksetzen
-          rm -rf data/bookDepth/${{ matrix.symbol }}
-          # alte Parquet-Dateien im Repo entfernen
-          rm -f historical_tech/bookDepth/features/${{ matrix.symbol }}-features-*.parquet
-
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: true
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -53,41 +43,43 @@ jobs:
           echo "global_start=${{ inputs.start_date }}" >> $GITHUB_OUTPUT
           echo "global_end=${{ inputs.end_date }}"   >> $GITHUB_OUTPUT
 
-      - name: Download bookDepth CSVs
+      - name: Download & unzip raw bookDepth with Overlap & Inception
         shell: bash
         run: |
           SYMBOL=${{ matrix.symbol }}
           SDG=${{ steps.dates.outputs.global_start }}
           ED=${{ steps.dates.outputs.global_end }}
 
-          # Symbol-spezifische Inception-Daten
+          # Symbol-Inception
           case "$SYMBOL" in
-            BTCUSDT|ETHUSDT|BNBUSDT|SOLUSDT) INC="2023-01-01" ;;
-            XRPUSDT)                           INC="2023-01-06" ;;
-            ENAUSDT)                           INC="2024-04-02" ;;
-            *)                                 INC=$SDG        ;;
+            BTCUSDT|ETHUSDT|BNBUSDT|SOLUSDT) INC="2023-01-01";;
+            XRPUSDT)                           INC="2023-01-06";;
+            ENAUSDT)                           INC="2024-04-02";;
+            *)                                 INC=$SDG;;
           esac
 
-          # Startdatum = max(global_start, INC)
+          # Start = max(global_start, INC)
           if [[ "$(date -d"$SDG" +%s)" -lt "$(date -d"$INC" +%s)" ]]; then
             SD="$INC"
           else
             SD="$SDG"
           fi
 
+          SD_RAW=$(date -I -d "$SD -1 day")
           DIR=data/bookDepth/$SYMBOL
           mkdir -p "$DIR"
 
-          CUR="$SD"
+          CUR="$SD_RAW"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
-            FNAME="$SYMBOL-bookDepth-$CUR.csv"
-            URL="https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$FNAME"
-            echo "→ Fetching $FNAME"
-            if curl -sSf "$URL" -o "$FNAME"; then
-              mv "$FNAME" "$DIR/"
+            ZIP="${SYMBOL}-bookDepth-${CUR}.zip"
+            URL="https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP"
+            echo "→ Fetching $ZIP"
+            if curl -sSf "$URL" -o "$ZIP"; then
+              unzip -q -o "$ZIP" -d "$DIR"
+              rm -f "$ZIP"
             else
-              echo "⚠️ Missing $FNAME – skipping"
-              rm -f "$FNAME"
+              echo "⚠️ Missing $ZIP – skipping"
+              rm -f "$ZIP"
             fi
             CUR=$(date -I -d "$CUR +1 day")
           done
@@ -114,7 +106,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git fetch origin main
           git checkout main
-          git pull --rebase --autostash origin main
+          git pull --rebase origin main
           git add historical_tech/bookDepth/features
           git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${{ steps.dates.outputs.global_start }} to ${{ steps.dates.outputs.global_end }}" || echo "No changes"
           git push https://x-access-token:${REPO_TOKEN}@github.com/${REPO}.git HEAD:main
