--- a/.github/workflows/download_bookDepth.yml
+++ b/.github/workflows/download_bookDepth.yml
@@ -40,17 +40,17 @@ jobs:
       - name: Calc dates
         id: dates
         run: |
-          echo "global_start=${{ inputs.start_date }}" >> $GITHUB_OUTPUT
-          echo "global_end=${{ inputs.end_date }}"   >> $GITHUB_OUTPUT
+          echo "global_start=${{ inputs.start_date }}"    >> $GITHUB_OUTPUT
+          echo "global_end=${{ inputs.end_date }}"        >> $GITHUB_OUTPUT
 
-      - name: Download & unzip raw bookDepth with Overlap & Inception
+      - name: Download & unzip bookDepth with Inception
         shell: bash
         run: |
           SYMBOL=${{ matrix.symbol }}
           SDG=${{ steps.dates.outputs.global_start }}
           ED=${{ steps.dates.outputs.global_end }}
 
-          # Symbol-Inception
+          # 1) Symbol-Inception festlegen
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT|BNBUSDT|SOLUSDT) INC="2023-01-01";;
             XRPUSDT)                           INC="2023-01-06";;
@@ -58,25 +58,24 @@ jobs:
             *)                                 INC=$SDG;;
           esac
 
-          # Start = max(global_start, INC)
+          # 2) Start = max(global_start, INC)
           if [[ "$(date -d"$SDG" +%s)" -lt "$(date -d"$INC" +%s)" ]]; then
             SD="$INC"
           else
             SD="$SDG"
           fi
 
-          SD_RAW=$(date -I -d "$SD -1 day")
           DIR=data/bookDepth/$SYMBOL
           mkdir -p "$DIR"
 
-          CUR="$SD_RAW"
+          CUR="$SD"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-bookDepth-${CUR}.zip"
-            URL="https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP"
             echo "→ Fetching $ZIP"
-            if curl -sSf "$URL" -o "$ZIP"; then
-              unzip -q -o "$ZIP" -d "$DIR"
-              rm -f "$ZIP"
+            if curl -sSf \
+                 "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" \
+                 -o "$ZIP"; then
+              unzip -q -o "$ZIP" -d "$DIR" && rm -f "$ZIP"
             else
               echo "⚠️ Missing $ZIP – skipping"
               rm -f "$ZIP"
