--- a/.github/workflows/download_bookDepth.yml
+++ b/.github/workflows/download_bookDepth.yml
@@ -35,22 +35,22 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install --upgrade pandas pyarrow
+          pip install --upgrade pandas pyarrow scipy
 
       - name: Calc dates
         id: dates
         run: |
-          echo "global_start=${{ inputs.start_date }}"    >> $GITHUB_OUTPUT
-          echo "global_end=${{ inputs.end_date }}"        >> $GITHUB_OUTPUT
+          echo "global_start=${{ inputs.start_date }}" >> $GITHUB_OUTPUT
+          echo "global_end=${{ inputs.end_date }}"   >> $GITHUB_OUTPUT
 
       - name: Download & unzip bookDepth with Inception
         shell: bash
         run: |
+          echo "→ Using inception logic for $SYMBOL"
           SYMBOL=${{ matrix.symbol }}
           SDG=${{ steps.dates.outputs.global_start }}
           ED=${{ steps.dates.outputs.global_end }}
 
-          # 1) Symbol-Inception festlegen
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT|BNBUSDT|SOLUSDT) INC="2023-01-01";;
             XRPUSDT)                           INC="2023-01-06";;
@@ -58,25 +58,25 @@ jobs:
             *)                                 INC=$SDG;;
           esac
 
-          # 2) Start = max(global_start, INC)
           if [[ "$(date -d"$SDG" +%s)" -lt "$(date -d"$INC" +%s)" ]]; then
             SD="$INC"
           else
             SD="$SDG"
           fi
+          echo "→ Using start $SD (incorp. inception)"
 
           DIR=data/bookDepth/$SYMBOL
           mkdir -p "$DIR"
 
           CUR="$SD"
-          echo "→ Using start $SD (incorporates inception)"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-bookDepth-${CUR}.zip"
             echo "→ Fetching $ZIP"
             if curl -sSf \
                  "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" \
                  -o "$ZIP"; then
-              unzip -q -o "$ZIP" -d "$DIR" && rm -f "$ZIP"
+              unzip -q -o "$ZIP" -d "$DIR"
+              rm -f "$ZIP"
             else
               echo "⚠️ Missing $ZIP – skipping"
               rm -f "$ZIP"
