--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -10,7 +10,6 @@ on:
       end_date:
         description: 'Enddatum (YYYY-MM-DD)'
         required: true
-
   # 2) Geplanter Run um 03:00 UTC täglich
   schedule:
     - cron: '0 3 * * *'
@@ -52,29 +51,27 @@ jobs:
         id: dates
         run: |
           # global_start fix: 2025-01-01
-          echo "global_start=2025-01-01"       >> $GITHUB_OUTPUT
+          echo "global_start=2025-01-01" >> $GITHUB_OUTPUT
           # end = today
-          echo "today=$(date -I)"              >> $GITHUB_OUTPUT
+          echo "today=$(date -I)"        >> $GITHUB_OUTPUT
 
       - name: Determine resume point
         id: resume
         run: |
           SYMBOL=${{ matrix.symbol }}
           DIR=historical_tech/bookDepth/features
-          # finde altes File
           old=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
           if [[ -n "$old" ]]; then
-            # extrahiere altes Enddatum aus dem Filenamen
             old_end=$(basename "$old" .parquet \
               | sed -E 's/^.*_to_([0-9]{4}-[0-9]{2}-[0-9]{2})$/\1/')
             start=$(date -I -d "$old_end + 1 day")
-            echo "mode=append"                  >> $GITHUB_OUTPUT
-            echo "start=$start"                 >> $GITHUB_OUTPUT
+            echo "mode=append"               >> $GITHUB_OUTPUT
+            echo "start=$start"              >> $GITHUB_OUTPUT
           else
-            echo "mode=fresh"                   >> $GITHUB_OUTPUT
+            echo "mode=fresh"                >> $GITHUB_OUTPUT
             echo "start=${{ steps.dates.outputs.global_start }}" >> $GITHUB_OUTPUT
           fi
-          echo "end=${{ steps.dates.outputs.today }}"           >> $GITHUB_OUTPUT
+          echo "end=${{ steps.dates.outputs.today }}" >> $GITHUB_OUTPUT
 
       - name: Download & unzip bookDepth with Inception
         shell: bash
@@ -83,32 +80,25 @@ jobs:
           SYMBOL=${{ matrix.symbol }}
           SDG=${{ steps.resume.outputs.start }}
           ED=${{ steps.resume.outputs.end }}
-
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT|BNBUSDT|SOLUSDT) INC="2023-01-01";;
             XRPUSDT)                           INC="2023-01-06";;
             ENAUSDT)                           INC="2024-04-02";;
             *)                                 INC=$SDG;;
           esac
-
-          # sicherstellen, dass wir Mindestens Inception berücksichtigen
           if [[ "$(date -d"$SDG" +%s)" -lt "$(date -d"$INC" +%s)" ]]; then
             SD="$INC"
           else
             SD="$SDG"
           fi
           echo "→ Download days from $SD to $ED"
-
           DIR=data/bookDepth/$SYMBOL
           mkdir -p "$DIR"
-
           CUR="$SD"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-bookDepth-${CUR}.zip"
             echo "→ Fetching $ZIP"
-            if curl -sSf \
-                 "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" \
-                 -o "$ZIP"; then
+            if curl -sSf "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" -o "$ZIP"; then
               unzip -q -o "$ZIP" -d "$DIR" && rm -f "$ZIP"
             else
               echo "⚠️ Missing $ZIP – skipping"
@@ -120,14 +110,13 @@ jobs:
       - name: Feature extraction & append
         run: |
           mkdir -p historical_tech/bookDepth/features
-          OUT=historical_tech/bookDepth/features/${{ matrix.symbol }}-features-\
-${{ steps.dates.outputs.global_start }}_to_${{ steps.resume.outputs.end }}.parquet
-
+          # jetzt in einer Zeile, damit YAML-Parser happy ist:
+          OUT="historical_tech/bookDepth/features/${{ matrix.symbol }}-features-${{ steps.dates.outputs.global_start }}_to_${{ steps.resume.outputs.end }}.parquet"
           python3 extract_bookDepth_features.py \
             --input-dir data/bookDepth/${{ matrix.symbol }} \
-            --start-date ${{ steps.dates.outputs.global_start }} \
-            --end-date   ${{ steps.resume.outputs.end }} \
-            --output-file $OUT
+            --start-date "${{ steps.dates.outputs.global_start }}" \
+            --end-date   "${{ steps.resume.outputs.end }}" \
+            --output-file "$OUT"
 
       - name: Commit & Push
         run: |
@@ -137,11 +126,10 @@ ${{ steps.dates.outputs.global_start }}_to_${{ steps.resume.outputs.end }}.parqu
           git checkout main
           git pull --rebase origin main
           git add historical_tech/bookDepth/features
-          git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features \
-${{ steps.dates.outputs.global_start }} to ${{ steps.resume.outputs.end }}" \
-            || echo "No changes"
+          git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${{ steps.dates.outputs.global_start }} to ${{ steps.resume.outputs.end }}" || echo "No changes"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
 
       - name: Cleanup raw data
         if: always()
-        run: rm -rf data/bookDepth/${{ matrix.symbol }}
+        run: |
+          rm -rf data/bookDepth/${{ matrix.symbol }}
