--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -28,10 +28,11 @@ jobs:
         shell: bash
         run: |
           YESTERDAY=$(date -d "yesterday" '+%Y-%m-%d')
-          TARGET_DIR="historical/${{ matrix.symbol }}/${{ matrix.interval }}"
-          if compgen -G "$TARGET_DIR/${{ matrix.symbol }}-${{ matrix.interval }}-*.csv" > /dev/null; then
-            LAST=$(find "$TARGET_DIR" -type f -name "${{ matrix.symbol }}-${{ matrix.interval }}-*.csv" \
-              | sed -E "s/.*${{ matrix.symbol }}-${{ matrix.interval }}-([0-9]{4}-[0-9]{2}-[0-9]{2})\.csv/\1/" \
+          DIR="historical/historical-${{ matrix.symbol }}-${{ matrix.interval }}"
+          if compgen -G "$DIR/${{ matrix.symbol }}-${{ matrix.interval }}-*.csv" > /dev/null; then
+            LAST=$(find "$DIR" -type f \
+              -name "${{ matrix.symbol }}-${{ matrix.interval }}-*.csv" \
+              | sed -E "s/.*${{ matrix.symbol }}-${{ matrix.interval }}-([0-9\-]+)\.csv/\1/" \
               | sort | tail -n1)
             START=$(date -d "$LAST +1 day" '+%Y-%m-%d')
           else
@@ -45,7 +46,6 @@ jobs:
         shell: bash
         run: |
           chmod +x historical/download_history_range.sh
-          echo "→ Downloading ${{ matrix.symbol }} @ ${{ matrix.interval }} from $START to $END"
           historical/download_history_range.sh \
             "${{ matrix.symbol }}" \
             "${{ matrix.interval }}" \
@@ -56,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: historical-${{ matrix.symbol }}-${{ matrix.interval }}
-          path: historical/${{ matrix.symbol }}/${{ matrix.interval }}/*.csv
+          path: historical/historical-${{ matrix.symbol }}-${{ matrix.interval }}/*.csv
           if-no-files-found: ignore
 
   aggregate_and_push:
@@ -81,10 +81,8 @@ jobs:
         run: |
           mkdir -p historical
           find historical-artifacts -type f | while read src; do
-            # extrahiere Ordnername (z.B. historical-BTCUSDT-15m) und Dateiname
-            dir=$(basename "$(dirname "$src")")
-            file=$(basename "$src")
-            dst="historical/${dir}/${file}"
+            rel=${src#historical-artifacts/}           # e.g. historical-BTCUSDT-1h/…
+            dst="historical/${rel}"
             mkdir -p "$(dirname "$dst")"
             mv "$src" "$dst"
             echo " ➕ $dst"
